# spectralsat

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: MultibandSaturator.cpp  MultibandSaturator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
